--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon -L app.js"
   },
   "author": "Maximilian Schwarzmüller / Academind GmbH",
   "license": "ISC",
@@ -13,5 +14,8 @@
     "express": "^4.18.2",
     "mongoose": "^5.13.20",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
