--- a/compose.yml
+++ b/compose.yml
@@ -33,6 +33,8 @@ services:
   goals-front:
     build:
       context: './frontend'
+    env_file:
+      - ./env/frontend.env
     networks:
       - 'goals-net'
     volumes:
